--- a/real_estate_client/src/app/property/property-card/property-card.component.html
+++ b/real_estate_client/src/app/property/property-card/property-card.component.html
@@ -1,12 +1,9 @@
-<div class="row">
-<div class="shadow-lg col-sm-4 p-3">
+
  <div class="card">
     <img class="property-image" src="assets/default.jpg">
     <div class="card-body p-2">
-        <h1> {{ Property.Name }} </h1>
-        <p> {{ Property.Type }}</p>
-        <p> {{ Property.Price }}</p>   
+        <h2> {{ property.Name }} </h2> 
+        <h3> {{ property.Type }} </h3> 
+        <h4> {{ property.Price }} </h4> 
     </div>
  </div>
-</div>
-</div>
