--- a/real_estate_client/src/app/property/property-card/property-card.component.css
+++ b/real_estate_client/src/app/property/property-card/property-card.component.css
@@ -2,6 +2,39 @@ h1 {
     font-weight: normal;
 }
 
-.property-image {
+.card-img-wrapper {
+    overflow: hidden;
+    position: relative;
+}
+
+.card:hover img {
+    transform: scale(1.2, 1.2);
+    transition-duration: 500ms;
+    transition-timing-function: ease-out;
     height: 300px;
+    opacity: .4;
+}
+
+.card img {
+    transform: scale(1, 1);
+    transition-duration: 500ms;
+    transition-timing-function: ease-out;
+    height: 300px;
+}
+
+.member-icons {
+    position: absolute;
+    left: 0;
+    bottom: -30%;
+    right: 0;
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.card-img-wrapper:hover .member-icons {
+    bottom: 0;
+}
+
+.animate {
+    transition: all 0.3s ease-in-out;
 }
