--- a/real_estate_client/src/app/property/property-card/property-card.component.html
+++ b/real_estate_client/src/app/property/property-card/property-card.component.html
@@ -1,6 +1,20 @@
 
  <div class="card">
-    <img class="property-image" src="assets/default.jpg">
+    <div class="card-img-wrapper">
+        <img class="card-img-top" src="assets/default.jpg">
+        <ul class="list-inline text-center member-icons animate">
+            <li class="list-inline-item">
+                <button class="btn btn-primary">
+                    <i class="fa-solid fa-pen-to-square"></i>
+                </button>
+            </li>
+            <li class="list-inline-item">
+                <button class="btn btn-primary">
+                    <i class="fa-solid fa-address-book"></i>
+                </button>
+            </li>
+        </ul>
+    </div>
     <div class="card-body p-2">
         <h2> {{ property.Name }} </h2> 
         <h3> {{ property.Type }} </h3> 
