--- a/real_estate_client/src/app/app.component.html
+++ b/real_estate_client/src/app/app.component.html
@@ -1,5 +1,5 @@
-<!-- call reusable components -->
+<!-- root component -->
 <app-nav-bar></app-nav-bar>
 <div class="container" style="margin-top: 70px;">
-    <app-property-list></app-property-list>
+    <router-outlet></router-outlet>
 </div>
