--- a/real_estate_client/src/app/nav-bar/nav-bar.component.html
+++ b/real_estate_client/src/app/nav-bar/nav-bar.component.html
@@ -7,7 +7,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active" aria-current="page" routerLink="/">Buy</a>
+            <a class="nav-link" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active" routerLink="/">Buy</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLinkActive="active" routerLink="/rent-property">Rent</a>
@@ -16,10 +16,16 @@
             <a class="nav-link" routerLinkActive="active" routerLink="/add-property">List Property (Free)</a>
           </li>
         </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+        <div>
+          <ul class="nav navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" routerLinkActive="active" routerLink="user/register">Register</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLinkActive="active" routerLink="user/login">Login</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </nav>
