--- a/real_estate_client/src/app/nav-bar/nav-bar.component.html
+++ b/real_estate_client/src/app/nav-bar/nav-bar.component.html
@@ -18,14 +18,20 @@
         </ul>
         <div>
           <ul class="nav navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" routerLinkActive="active" routerLink="user/register">Register</a>
+            <li *ngIf="!isUserLoggedIn()" class="nav-item">
+              <a class="nav-link" routerLinkActive="active" routerLink="user/register">Sign Up</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" routerLinkActive="active" routerLink="user/login">Login</a>
+            <li *ngIf="!isUserLoggedIn()" class="nav-item">
+              <a class="nav-link" routerLinkActive="active" routerLink="user/login">Sign In</a>
+            </li>
+            <li *ngIf="isUserLoggedIn()" class="nav-item">
+              <p-menu #menu [model]="items" [popup]="true" />
+              <button (click)="menu.toggle($event)" class="btn btn-dark">
+                <i class="fa-solid fa-ellipsis-vertical"></i>
+              </button>
             </li>
           </ul>
         </div>
       </div>
     </div>
-  </nav>
+  </nav>                
