--- a/real_estate_client/src/app/user/login/user-login/user-login.component.html
+++ b/real_estate_client/src/app/user/login/user-login/user-login.component.html
@@ -1,1 +1,25 @@
-<p>user-login works!</p>
+<p-toast></p-toast>
+<div class="row">
+    <div class="col-6 m-auto">
+        <div class="card">
+            <div class="card-header">
+                Sign in
+            </div>
+            <div class="card-body">
+                <form [formGroup]="loginForm" (ngSubmit)="signIn()">
+                    <div class="form-group col-12">
+                        <label for="username">Username</label>
+                        <input type="text" class="form-control" formControlName="userName" required>
+                    </div>
+                    <div class="form-group col-12">
+                        <label for="password">Password</label>
+                        <input type="password" class="form-control" formControlName="password" required>
+                    </div>
+                    <div class="form-group col-12 mt-2">
+                        <button class="btn btn-primary">Sign in</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
