Finishing HTML template for adding property including: all fields, moving between tabs, validation for first tab and enable preview property during populating form using two-way binding

--- a/real_estate_client/src/app/property/property-add/add-property/add-property.component.css
+++ b/real_estate_client/src/app/property/property-add/add-property/add-property.component.css
@@ -4,3 +4,16 @@
 .error-block {
     color: red;
 }
+.photo-control {
+    min-height: 300px;
+    vertical-align: middle;
+    text-align: center;
+    border: 1px dashed blue;
+    margin: 2px;
+}
+.card-header {
+    color: #fff;
+    background-color: #10b981;
+    border-radius: 3px;
+    height: 36px;
+}
