--- a/real_estate_client/src/app/property/property-card/property-card.component.css
+++ b/real_estate_client/src/app/property/property-card/property-card.component.css
@@ -2,6 +2,10 @@ h1 {
     font-weight: normal;
 }
 
+.card {
+    min-height: 300px;
+}
+
 .card-img-wrapper {
     overflow: hidden;
     position: relative;
@@ -12,7 +16,8 @@ h1 {
     transition-duration: 500ms;
     transition-timing-function: ease-out;
     height: 300px;
-    opacity: .4;
+    opacity: .6;
+    overflow: hidden;
 }
 
 .card img {
@@ -32,7 +37,7 @@ h1 {
 }
 
 .card-img-wrapper:hover .member-icons {
-    bottom: 0;
+    bottom: 27%;
 }
 
 .animate {
